--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartaxistitleloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.interfaces.chartaxistitleloadoptions.yml
@@ -2,9 +2,9 @@
 items:
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions:interface'
     summary: |-
-      <span data-ttu-id="a7d59-101">表示图表坐标轴的标题。</span><span class="sxs-lookup"><span data-stu-id="a7d59-101">Represents the title of a chart axis.</span></span>
+      表示图表坐标轴的标题。
 
-      <span data-ttu-id="a7d59-102">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7d59-102">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.Interfaces.ChartAxisTitleLoadOptions
     fullName: Excel.Interfaces.ChartAxisTitleLoadOptions
     langs:
@@ -17,7 +17,7 @@ items:
       - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#text:member'
       - 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#visible:member'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#$all:member'
-    summary: '<span data-ttu-id="a7d59-103">为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`</span><span class="sxs-lookup"><span data-stu-id="a7d59-103">Specifying `$all` for the LoadOptions loads all the scalar properties (e.g.: `Range.address`</span></span><!-- --><span data-ttu-id="a7d59-104">），但不是导航属性（例如：`Range.format.fill.color`</span><span class="sxs-lookup"><span data-stu-id="a7d59-104">) but not the navigational properties (e.g.: `Range.format.fill.color`</span></span><!-- --><span data-ttu-id="a7d59-105">).</span><span class="sxs-lookup"><span data-stu-id="a7d59-105"></span></span>'
+    summary: 为`$all` LoadOptions 指定加载所有标量属性（例如：`Range.address`<!-- -->），但不是导航属性（例如：`Range.format.fill.color`<!-- -->).
     name: $all
     fullName: $all
     langs:
@@ -30,9 +30,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#format:member'
     summary: |-
-      <span data-ttu-id="a7d59-106">表示图表坐标轴标题的格式。</span><span class="sxs-lookup"><span data-stu-id="a7d59-106">Represents the formatting of chart axis title.</span></span>
+      指定图表坐标轴标题的格式。
 
-      <span data-ttu-id="a7d59-107">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7d59-107">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -45,9 +45,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxisTitleFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#text:member'
     summary: |-
-      <span data-ttu-id="a7d59-108">表示坐标轴标题。</span><span class="sxs-lookup"><span data-stu-id="a7d59-108">Represents the axis title.</span></span>
+      指定轴标题。
 
-      <span data-ttu-id="a7d59-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7d59-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: text
     fullName: text
     langs:
@@ -60,9 +60,9 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ChartAxisTitleLoadOptions#visible:member'
     summary: |-
-      <span data-ttu-id="a7d59-110">指定坐标轴标题是否可见的布尔值。</span><span class="sxs-lookup"><span data-stu-id="a7d59-110">A boolean that specifies the visibility of an axis title.</span></span>
+      指定轴标题是否为 shape.visibile。
 
-      <span data-ttu-id="a7d59-111">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="a7d59-111">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
