--- a/docs/docs-ref-autogen/excel_1_2/excel/excel.nameditem.yml
+++ b/docs/docs-ref-autogen/excel_1_2/excel/excel.nameditem.yml
@@ -2,16 +2,16 @@
 items:
   - uid: 'excel!Excel.NamedItem:class'
     summary: |-
-      <span data-ttu-id="83c28-101">表示单元格区域或值的定义名称。</span><span class="sxs-lookup"><span data-stu-id="83c28-101">Represents a defined name for a range of cells or value.</span></span> <span data-ttu-id="83c28-102">名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。</span><span class="sxs-lookup"><span data-stu-id="83c28-102">Names can be primitive named objects (as seen in the type below), range object, or a reference to a range.</span></span> <span data-ttu-id="83c28-103">此对象可用于获取与名称相关的 range 对象。</span><span class="sxs-lookup"><span data-stu-id="83c28-103">This object can be used to obtain range object associated with names.</span></span>
+      表示单元格区域或值的定义名称。 名称可以是命名为对象的基元（如下面的类型中所示）、range 对象或对区域的引用。 此对象可用于获取与名称相关的 range 对象。
 
-      <span data-ttu-id="83c28-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83c28-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: Excel.NamedItem
     fullName: Excel.NamedItem
     langs:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.NamedItem#context:member'
@@ -27,7 +27,7 @@ items:
       - 'excel!Excel.NamedItem#value:member'
       - 'excel!Excel.NamedItem#visible:member'
   - uid: 'excel!Excel.NamedItem#context:member'
-    summary: <span data-ttu-id="83c28-105">与该对象关联的请求上下文。</span><span class="sxs-lookup"><span data-stu-id="83c28-105">The request context associated with the object.</span></span> <span data-ttu-id="83c28-106">这会将加载项的进程连接到 Office 主机应用程序的进程。</span><span class="sxs-lookup"><span data-stu-id="83c28-106">This connects the add-in's process to the Office host application's process.</span></span>
+    summary: 与该对象关联的请求上下文。 这会将加载项的进程连接到 Office 主机应用程序的进程。
     name: context
     fullName: context
     langs:
@@ -40,9 +40,9 @@ items:
           - 'excel!Excel.RequestContext:class'
   - uid: 'excel!Excel.NamedItem#getRange:member(1)'
     summary: |-
-      <span data-ttu-id="83c28-107">返回与名称相关联的 Range 对象。</span><span class="sxs-lookup"><span data-stu-id="83c28-107">Returns the range object that is associated with the name.</span></span> <span data-ttu-id="83c28-108">如果已命名项的类型不是 Range，将引发错误。</span><span class="sxs-lookup"><span data-stu-id="83c28-108">Throws an error if the named item's type is not a range.</span></span>
+      返回与名称相关联的 Range 对象。 如果已命名项的类型不是 Range，将引发错误。
 
-      <span data-ttu-id="83c28-109">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83c28-109">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: getRange()
     fullName: getRange()
     langs:
@@ -56,7 +56,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="83c28-110">示例</span><span class="sxs-lookup"><span data-stu-id="83c28-110">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           // Returns the Range object that is associated with the name. 
@@ -77,7 +77,7 @@ items:
           });
           ```
   - uid: 'excel!Excel.NamedItem#load:member(1)'
-    summary: <span data-ttu-id="83c28-111">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-111">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83c28-112">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83c28-112">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(options)
     fullName: load(options)
     langs:
@@ -91,11 +91,11 @@ items:
         description: ''
       parameters:
         - id: options
-          description: <span data-ttu-id="83c28-113">提供要加载的对象的属性的选项。</span><span class="sxs-lookup"><span data-stu-id="83c28-113">Provides options for which properties of the object to load.</span></span>
+          description: 提供要加载的对象的属性的选项。
           type:
             - 'excel!Excel.Interfaces.NamedItemLoadOptions:interface'
   - uid: 'excel!Excel.NamedItem#load:member(2)'
-    summary: <span data-ttu-id="83c28-114">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-114">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83c28-115">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83c28-115">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNames)
     fullName: load(propertyNames)
     langs:
@@ -109,7 +109,7 @@ items:
         description: |-
 
 
-          #### <a name="examples"></a><span data-ttu-id="83c28-116">示例</span><span class="sxs-lookup"><span data-stu-id="83c28-116">Examples</span></span>
+          #### <a name="examples"></a>示例
 
           ```javascript
           Excel.run(function (ctx) { 
@@ -128,11 +128,11 @@ items:
           ```
       parameters:
         - id: propertyNames
-          description: <span data-ttu-id="83c28-117">一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-117">A comma-delimited string or an array of strings that specify the properties to load.</span></span>
+          description: 一个以逗号分隔的字符串或字符串数组，用于指定要加载的属性。
           type:
             - 'string | string[]'
   - uid: 'excel!Excel.NamedItem#load:member(3)'
-    summary: <span data-ttu-id="83c28-118">将命令加入队列以加载对象的指定属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-118">Queues up a command to load the specified properties of the object.</span></span> <span data-ttu-id="83c28-119">在读取属性`context.sync()`之前，必须先调用。</span><span class="sxs-lookup"><span data-stu-id="83c28-119">You must call `context.sync()` before reading the properties.</span></span>
+    summary: 将命令加入队列以加载对象的指定属性。 在读取属性`context.sync()`之前，必须先调用。
     name: load(propertyNamesAndPaths)
     fullName: load(propertyNamesAndPaths)
     langs:
@@ -150,7 +150,7 @@ items:
         description: ''
       parameters:
         - id: propertyNamesAndPaths
-          description: '<span data-ttu-id="83c28-120">`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-120">`propertyNamesAndPaths.select` is a comma-delimited string that specifies the properties to load, and `propertyNamesAndPaths.expand` is a comma-delimited string that specifies the navigation properties to load.</span></span>'
+          description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
             - |-
               {
@@ -159,9 +159,9 @@ items:
                       }
   - uid: 'excel!Excel.NamedItem#name:member'
     summary: |-
-      <span data-ttu-id="83c28-121">对象的名称。</span><span class="sxs-lookup"><span data-stu-id="83c28-121">The name of the object.</span></span> <span data-ttu-id="83c28-122">只读。</span><span class="sxs-lookup"><span data-stu-id="83c28-122">Read-only.</span></span>
+      对象的名称。
 
-      <span data-ttu-id="83c28-123">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83c28-123">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -173,9 +173,9 @@ items:
         type:
           - string
   - uid: 'excel!Excel.NamedItem#set:member(1)'
-    summary: '<span data-ttu-id="83c28-124">同时设置一个对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-124">Sets multiple properties of an object at the same time.</span></span> <span data-ttu-id="83c28-125">您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。</span><span class="sxs-lookup"><span data-stu-id="83c28-125">You can pass either a plain object with the appropriate properties, or another API object of the same type.</span></span>'
+    summary: 同时设置一个对象的多个属性。 您可以传递具有相应属性的纯对象或相同类型的其他 API 对象。
     remarks: |-
-      <span data-ttu-id="83c28-126">此方法具有以下附加签名：</span><span class="sxs-lookup"><span data-stu-id="83c28-126">This method has the following additional signature:</span></span>
+      此方法具有以下附加签名：
 
       `set(properties: Excel.NamedItem): void`
     name: 'set(properties, options)'
@@ -191,15 +191,15 @@ items:
         description: ''
       parameters:
         - id: properties
-          description: <span data-ttu-id="83c28-127">一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-127">A JavaScript object with properties that are structured isomorphically to the properties of the object on which the method is called.</span></span>
+          description: 一个 JavaScript 对象，其属性的结构 isomorphically 为在其上调用方法的对象的属性。
           type:
             - 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
         - id: options
-          description: <span data-ttu-id="83c28-128">提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。</span><span class="sxs-lookup"><span data-stu-id="83c28-128">Provides an option to suppress errors if the properties object tries to set any read-only properties.</span></span>
+          description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.NamedItem#set:member(2)'
-    summary: '<span data-ttu-id="83c28-129">基于现有加载的对象同时设置该对象的多个属性。</span><span class="sxs-lookup"><span data-stu-id="83c28-129">Sets multiple properties on the object at the same time, based on an existing loaded object.</span></span>'
+    summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
     fullName: set(properties)
     langs:
@@ -217,7 +217,7 @@ items:
           type:
             - 'excel!Excel.NamedItem:class'
   - uid: 'excel!Excel.NamedItem#toJSON:member(1)'
-    summary: '<span data-ttu-id="83c28-130">重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`</span><span class="sxs-lookup"><span data-stu-id="83c28-130">Overrides the JavaScript `toJSON()` method in order to provide more useful output when an API object is passed to `JSON.stringify()`</span></span><!-- --><span data-ttu-id="83c28-131">.</span><span class="sxs-lookup"><span data-stu-id="83c28-131"></span></span> <span data-ttu-id="83c28-132">(`JSON.stringify`</span><span class="sxs-lookup"><span data-stu-id="83c28-132"></span></span><!-- --><span data-ttu-id="83c28-133">反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 NamedItem 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NamedItemData`</span><span class="sxs-lookup"><span data-stu-id="83c28-133">, in turn, calls the `toJSON` method of the object that is passed to it.) Whereas the original Excel.NamedItem object is an API object, the `toJSON` method returns a plain JavaScript object (typed as `Excel.Interfaces.NamedItemData`</span></span><!-- --><span data-ttu-id="83c28-134">），其中包含原始对象中所有已加载的子属性的浅表副本。</span><span class="sxs-lookup"><span data-stu-id="83c28-134">) that contains shallow copies of any loaded child properties from the original object.</span></span>'
+    summary: 重写 JavaScript `toJSON()`方法，以便在将 API 对象传递到时提供更有用的输出`JSON.stringify()`<!-- -->. (`JSON.stringify`<!-- -->反过来，也会调用传递`toJSON`给它的对象的方法。尽管原始 NamedItem 对象是 API 对象，但`toJSON`方法返回一个无格式的 JavaScript 对象（类型为`Excel.Interfaces.NamedItemData`<!-- -->），其中包含原始对象中所有已加载的子属性的浅表副本。
     name: toJSON()
     fullName: toJSON()
     langs:
@@ -231,9 +231,9 @@ items:
         description: ''
   - uid: 'excel!Excel.NamedItem#type:member'
     summary: |-
-      <span data-ttu-id="83c28-135">指明 name 公式返回的值的类型。</span><span class="sxs-lookup"><span data-stu-id="83c28-135">Indicates the type of the value returned by the name's formula.</span></span> <span data-ttu-id="83c28-136">有关详细信息，请参阅 NamedItemType。</span><span class="sxs-lookup"><span data-stu-id="83c28-136">See Excel.NamedItemType for details.</span></span> <span data-ttu-id="83c28-137">只读。</span><span class="sxs-lookup"><span data-stu-id="83c28-137">Read-only.</span></span>
+      指定由名称的公式返回的值的类型。 有关详细信息，请参阅 NamedItemType。
 
-      <span data-ttu-id="83c28-138">\[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83c28-138">\[ [API set: ExcelApi 1.1 for String,Integer,Double,Boolean,Range,Error; 1.7 for Array](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集：字符串、整型、双精度、布尔值、范围、错误的 ExcelApi 1.1、数组的 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
     fullName: type
     langs:
@@ -246,9 +246,9 @@ items:
           - 'excel!Excel.NamedItem#type~0:complex'
   - uid: 'excel!Excel.NamedItem#value:member'
     summary: |-
-      <span data-ttu-id="83c28-139">表示 name 公式计算出的值。</span><span class="sxs-lookup"><span data-stu-id="83c28-139">Represents the value computed by the name's formula.</span></span> <span data-ttu-id="83c28-140">对于已命名区域，将返回区域地址。</span><span class="sxs-lookup"><span data-stu-id="83c28-140">For a named range, will return the range address.</span></span> <span data-ttu-id="83c28-141">只读。</span><span class="sxs-lookup"><span data-stu-id="83c28-141">Read-only.</span></span>
+      表示 name 公式计算出的值。 对于已命名区域，将返回区域地址。
 
-      <span data-ttu-id="83c28-142">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83c28-142">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: value
     fullName: value
     langs:
@@ -261,9 +261,9 @@ items:
           - any
   - uid: 'excel!Excel.NamedItem#visible:member'
     summary: |-
-      <span data-ttu-id="83c28-143">指定对象是否可见。</span><span class="sxs-lookup"><span data-stu-id="83c28-143">Specifies whether the object is visible or not.</span></span>
+      指定对象是否可见。
 
-      <span data-ttu-id="83c28-144">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="83c28-144">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
     fullName: visible
     langs:
@@ -275,7 +275,7 @@ items:
         type:
           - boolean
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -287,7 +287,7 @@ references:
     name: Excel.Interfaces.NamedItemLoadOptions
   - uid: 'excel!Excel.Interfaces.NamedItemUpdateData:interface'
     name: Interfaces.NamedItemUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.Interfaces.NamedItemData:interface'
     name: Excel.Interfaces.NamedItemData
