--- a/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartupdatedata.yml
+++ b/docs/docs-ref-autogen/excel_1_4/excel/excel.interfaces.chartupdatedata.yml
@@ -1,7 +1,7 @@
 ### YamlMime:UniversalReference
 items:
   - uid: 'excel!Excel.Interfaces.ChartUpdateData:interface'
-    summary: '<span data-ttu-id="aaadd-101">一个接口，用于更新 Chart 对象上的数据，以供在`chart.set({ ... })`</span><span class="sxs-lookup"><span data-stu-id="aaadd-101">An interface for updating data on the Chart object, for use in `chart.set({ ... })`</span></span><!-- --><span data-ttu-id="aaadd-102">.</span><span class="sxs-lookup"><span data-stu-id="aaadd-102"></span></span>'
+    summary: '一个接口，用于更新 Chart 对象上的数据，以供在`chart.set({ ... })`<!-- -->.'
     name: Excel.Interfaces.ChartUpdateData
     fullName: Excel.Interfaces.ChartUpdateData
     langs:
@@ -21,9 +21,9 @@ items:
       - 'excel!Excel.Interfaces.ChartUpdateData#width:member'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#axes:member'
     summary: |-
-      <span data-ttu-id="aaadd-103">表示图表坐标轴。</span><span class="sxs-lookup"><span data-stu-id="aaadd-103">Represents chart axes.</span></span>
+      表示图表坐标轴。
 
-      <span data-ttu-id="aaadd-104">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-104">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axes
     fullName: axes
     langs:
@@ -36,9 +36,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAxesUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#dataLabels:member'
     summary: |-
-      <span data-ttu-id="aaadd-105">表示图表上的数据标签。</span><span class="sxs-lookup"><span data-stu-id="aaadd-105">Represents the datalabels on the chart.</span></span>
+      表示图表上的数据标签。
 
-      <span data-ttu-id="aaadd-106">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-106">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: dataLabels
     fullName: dataLabels
     langs:
@@ -51,9 +51,9 @@ items:
           - 'excel!Excel.Interfaces.ChartDataLabelsUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#format:member'
     summary: |-
-      <span data-ttu-id="aaadd-107">封装图表区域的格式属性。</span><span class="sxs-lookup"><span data-stu-id="aaadd-107">Encapsulates the format properties for the chart area.</span></span>
+      封装图表区域的格式属性。
 
-      <span data-ttu-id="aaadd-108">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-108">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: format
     fullName: format
     langs:
@@ -66,9 +66,9 @@ items:
           - 'excel!Excel.Interfaces.ChartAreaFormatUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#height:member'
     summary: |-
-      <span data-ttu-id="aaadd-109">表示 chart 对象的高度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="aaadd-109">Represents the height, in points, of the chart object.</span></span>
+      指定 chart 对象的高度（以磅为单位）。
 
-      <span data-ttu-id="aaadd-110">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-110">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: height
     fullName: height
     langs:
@@ -81,9 +81,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#left:member'
     summary: |-
-      <span data-ttu-id="aaadd-111">从图表左侧到工作表原点的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="aaadd-111">The distance, in points, from the left side of the chart to the worksheet origin.</span></span>
+      从图表左侧到工作表原点的距离，以磅值表示。
 
-      <span data-ttu-id="aaadd-112">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-112">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: left
     fullName: left
     langs:
@@ -96,9 +96,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#legend:member'
     summary: |-
-      <span data-ttu-id="aaadd-113">表示图表的图例。</span><span class="sxs-lookup"><span data-stu-id="aaadd-113">Represents the legend for the chart.</span></span>
+      表示图表的图例。
 
-      <span data-ttu-id="aaadd-114">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-114">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: legend
     fullName: legend
     langs:
@@ -111,9 +111,9 @@ items:
           - 'excel!Excel.Interfaces.ChartLegendUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#name:member'
     summary: |-
-      <span data-ttu-id="aaadd-115">表示 chart 对象的名称。</span><span class="sxs-lookup"><span data-stu-id="aaadd-115">Represents the name of a chart object.</span></span>
+      指定 chart 对象的名称。
 
-      <span data-ttu-id="aaadd-116">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-116">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: name
     fullName: name
     langs:
@@ -126,9 +126,9 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#title:member'
     summary: |-
-      <span data-ttu-id="aaadd-117">表示指定图表的标题，包括标题的文本、可见性、位置和格式。</span><span class="sxs-lookup"><span data-stu-id="aaadd-117">Represents the title of the specified chart, including the text, visibility, position, and formatting of the title.</span></span>
+      指定指定图表的标题，包括文本、可见性、位置和标题的格式。
 
-      <span data-ttu-id="aaadd-118">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-118">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: title
     fullName: title
     langs:
@@ -141,9 +141,9 @@ items:
           - 'excel!Excel.Interfaces.ChartTitleUpdateData:interface'
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#top:member'
     summary: |-
-      <span data-ttu-id="aaadd-119">表示从对象左边界至第 1 行顶部（在工作表上）或图表区域顶部（在图表上）的距离，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="aaadd-119">Represents the distance, in points, from the top edge of the object to the top of row 1 (on a worksheet) or the top of the chart area (on a chart).</span></span>
+      指定从对象的上边缘到工作表上的第1行顶部或图表上的图表区顶部的距离（以磅为单位）。
 
-      <span data-ttu-id="aaadd-120">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-120">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: top
     fullName: top
     langs:
@@ -156,9 +156,9 @@ items:
           - number
   - uid: 'excel!Excel.Interfaces.ChartUpdateData#width:member'
     summary: |-
-      <span data-ttu-id="aaadd-121">表示 chart 对象的宽度，以磅值表示。</span><span class="sxs-lookup"><span data-stu-id="aaadd-121">Represents the width, in points, of the chart object.</span></span>
+      指定 chart 对象的宽度（以磅为单位）。
 
-      <span data-ttu-id="aaadd-122">\[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]</span><span class="sxs-lookup"><span data-stu-id="aaadd-122">\[ [API set: ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets) \]</span></span>
+      \[[API 集： ExcelApi 1.1](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: width
     fullName: width
     langs:
