commit translated contents

--- a/docs/docs-ref-autogen/excel/excel/excel.worksheetcollection.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.worksheetcollection.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.WorksheetCollection#add:member(1)'
@@ -481,7 +481,7 @@ items:
         - id: propertyNamesAndPaths
           description: '`propertyNamesAndPaths.select`是一个以逗号分隔的字符串，用于指定要加载的属性`propertyNamesAndPaths.expand` ，并且是一个以逗号分隔的字符串，用于指定要加载的导航属性。'
           type:
-            - 'excel!OfficeExtension.LoadOption:interface'
+            - 'office!OfficeExtension.LoadOption:interface'
   - uid: 'excel!Excel.WorksheetCollection#onActivated:member'
     summary: |-
       当工作簿中的任何工作表激活时发生此事件。
@@ -667,8 +667,7 @@ items:
     summary: |-
       在特定工作表上的一个或多个行的隐藏状态更改时发生。
 
-      \[[API 集： EXCELAPI BETA （仅限预览）](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
-    isPreview: true
+      \[[API 集： ExcelApi 1.11](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: onRowHiddenChanged
     fullName: onRowHiddenChanged
     langs:
@@ -738,7 +737,7 @@ items:
           - 'excel!Excel.Interfaces.WorksheetCollectionData:interface'
         description: ''
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.Worksheet:class'
     name: Excel.Worksheet
@@ -746,7 +745,7 @@ references:
     name: 'OfficeExtension.ClientResult<string[]>'
     fullName: 'OfficeExtension.ClientResult<string[]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: '<string[]>'
@@ -766,7 +765,7 @@ references:
     name: 'OfficeExtension.ClientResult<string[]>'
     fullName: 'OfficeExtension.ClientResult<string[]>'
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: '<string[]>'
@@ -786,7 +785,7 @@ references:
     name: OfficeExtension.ClientResult<number>
     fullName: OfficeExtension.ClientResult<number>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.ClientResult:class'
+      - uid: 'office!OfficeExtension.ClientResult:class'
         name: OfficeExtension.ClientResult
         fullName: OfficeExtension.ClientResult
       - name: <number>
@@ -814,13 +813,13 @@ references:
       - uid: 'excel!Excel.Interfaces.CollectionLoadOptions:interface'
         name: Excel.Interfaces.CollectionLoadOptions
         fullName: Excel.Interfaces.CollectionLoadOptions
-  - uid: 'excel!OfficeExtension.LoadOption:interface'
+  - uid: 'office!OfficeExtension.LoadOption:interface'
     name: OfficeExtension.LoadOption
   - uid: 'excel!Excel.WorksheetCollection#onActivated~0:complex'
     name: OfficeExtension.EventHandlers<Excel.WorksheetActivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetActivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -834,7 +833,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetAddedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetAddedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -848,7 +847,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetCalculatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetCalculatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -862,7 +861,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -876,7 +875,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetColumnSortedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetColumnSortedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -890,7 +889,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetDeactivatedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetDeactivatedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -904,7 +903,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetDeletedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetDeletedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -918,7 +917,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetFilteredEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetFilteredEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -932,7 +931,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetFormatChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -946,7 +945,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetRowHiddenChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -960,7 +959,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetRowSortedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetRowSortedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -974,7 +973,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetSelectionChangedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetSelectionChangedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
@@ -988,7 +987,7 @@ references:
     name: OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
     fullName: OfficeExtension.EventHandlers<Excel.WorksheetSingleClickedEventArgs>
     spec.typeScript:
-      - uid: 'excel!OfficeExtension.EventHandlers:class'
+      - uid: 'office!OfficeExtension.EventHandlers:class'
         name: OfficeExtension.EventHandlers
         fullName: OfficeExtension.EventHandlers
       - name: <
