--- a/docs/docs-ref-autogen/excel/excel/excel.shapelineformat.yml
+++ b/docs/docs-ref-autogen/excel/excel/excel.shapelineformat.yml
@@ -11,7 +11,7 @@ items:
       - typeScript
     type: class
     extends:
-      - 'excel!OfficeExtension.ClientObject:class'
+      - 'office!OfficeExtension.ClientObject:class'
     package: excel!
     children:
       - 'excel!Excel.ShapeLineFormat#color:member'
@@ -29,7 +29,7 @@ items:
       - 'excel!Excel.ShapeLineFormat#weight:member'
   - uid: 'excel!Excel.ShapeLineFormat#color:member'
     summary: |-
-      代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）。
+      代表 HTML 颜色格式的线条颜色，格式\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如，"橙色"）。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -156,7 +156,7 @@ items:
         - id: options
           description: 提供一个选项，以在 properties 对象尝试设置任何只读属性时禁止显示错误。
           type:
-            - 'excel!OfficeExtension.UpdateOptions:interface'
+            - 'office!OfficeExtension.UpdateOptions:interface'
   - uid: 'excel!Excel.ShapeLineFormat#set:member(2)'
     summary: 基于现有加载的对象同时设置该对象的多个属性。
     name: set(properties)
@@ -220,7 +220,7 @@ items:
           - number
   - uid: 'excel!Excel.ShapeLineFormat#visible:member'
     summary: |-
-      表示形状元素的线条格式是否可见。 当形状的可见性不一致时，返回 null。
+      指定是否显示 shape 元素的线条格式。 当形状的可见性不一致时，返回 null。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: visible
@@ -249,7 +249,7 @@ items:
         type:
           - number
 references:
-  - uid: 'excel!OfficeExtension.ClientObject:class'
+  - uid: 'office!OfficeExtension.ClientObject:class'
     name: OfficeExtension.ClientObject
   - uid: 'excel!Excel.RequestContext:class'
     name: RequestContext
@@ -268,7 +268,7 @@ references:
     name: Excel.Interfaces.ShapeLineFormatLoadOptions
   - uid: 'excel!Excel.Interfaces.ShapeLineFormatUpdateData:interface'
     name: Interfaces.ShapeLineFormatUpdateData
-  - uid: 'excel!OfficeExtension.UpdateOptions:interface'
+  - uid: 'office!OfficeExtension.UpdateOptions:interface'
     name: OfficeExtension.UpdateOptions
   - uid: 'excel!Excel.ShapeLineFormat#style~0:complex'
     name: Excel.ShapeLineStyle | "Single" | "ThickBetweenThin" | "ThickThin" | "ThinThick" | "ThinThin"
