--- a/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionalrangeborderloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_1_6/excel/excel.interfaces.conditionalrangeborderloadoptions.yml
@@ -30,7 +30,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#color:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -45,7 +45,7 @@ items:
           - boolean
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderLoadOptions#sideIndex:member'
     summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。 只读。
+      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
