--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.databarconditionalformatdata.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.interfaces.databarconditionalformatdata.yml
@@ -19,7 +19,7 @@ items:
       - 'excel!Excel.Interfaces.DataBarConditionalFormatData#upperBoundRule:member'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#axisColor:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的轴线的颜色的 HTML 颜色代码。 "" （空字符串）如果不存在或未设置轴。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: axisColor
@@ -49,7 +49,7 @@ items:
           - 'excel!Excel.Interfaces.DataBarConditionalFormatData#axisFormat~0:complex'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#barDirection:member'
     summary: |-
-      表示数据条图形应基于的方向。
+      指定数据条图形的基于方向。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: barDirection
@@ -79,7 +79,7 @@ items:
           - 'excel!Excel.ConditionalDataBarRule:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#negativeFormat:member'
     summary: |-
-      在 Excel 数据栏中的轴左侧的所有值的表示形式。 只读。
+      在 Excel 数据栏中的轴左侧的所有值的表示形式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: negativeFormat
@@ -94,7 +94,7 @@ items:
           - 'excel!Excel.Interfaces.ConditionalDataBarNegativeFormatData:interface'
   - uid: 'excel!Excel.Interfaces.DataBarConditionalFormatData#positiveFormat:member'
     summary: |-
-      在 Excel 数据栏中的轴右侧的所有值的表示形式。 只读。
+      在 Excel 数据栏中的轴右侧的所有值的表示形式。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: positiveFormat
