--- a/docs/docs-ref-autogen/excel_1_7/excel/excel.tableselectionchangedeventargs.yml
+++ b/docs/docs-ref-autogen/excel_1_7/excel/excel.tableselectionchangedeventargs.yml
@@ -47,7 +47,7 @@ items:
           ```
   - uid: 'excel!Excel.TableSelectionChangedEventArgs#isInsideTable:member'
     summary: |-
-      指示选定区域是否在表格内，如果 IsInsideTable 为 false，则地址无效。
+      指定所选内容是否在表格中，如果 IsInsideTable 为 false，则地址将无用。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: isInsideTable
@@ -77,7 +77,7 @@ items:
           - string
   - uid: 'excel!Excel.TableSelectionChangedEventArgs#type:member'
     summary: |-
-      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。 只读。
+      获取事件的类型。 有关详细信息，请参阅 Excel.EventType。
 
       \[[API 集： ExcelApi 1.7](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
