--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalformatloadoptions.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalformatloadoptions.yml
@@ -197,7 +197,7 @@ items:
           - 'excel!Excel.Interfaces.IconSetConditionalFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatLoadOptions#id:member'
     summary: |-
-      当前 ConditionalFormatCollection 内的条件格式的优先级。 只读。
+      当前 ConditionalFormatCollection 内的条件格式的优先级。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: id
@@ -242,7 +242,7 @@ items:
           - 'excel!Excel.Interfaces.PresetCriteriaConditionalFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatLoadOptions#priority:member'
     summary: |-
-      条件格式集合中当前存在此条件格式的优先级（或索引）。 更改此设置还会更改其他条件格式的优先级，以允许进行连续的优先级顺序。 使用负优先级从后开始。 优先级大于界限将获取并设置为最大值（如果为负，则为最小值）优先级。 另请注意，如果您更改优先级，则必须在该新的优先级位置重新获取该对象的新副本（如果要对其进行进一步的更改）。 只读。
+      条件格式集合中当前存在此条件格式的优先级（或索引）。 更改此设置还会更改其他条件格式的优先级，以允许进行连续的优先级顺序。 使用负优先级从后开始。 优先级大于界限将获取并设置为最大值（如果为负，则为最小值）优先级。 另请注意，如果您更改优先级，则必须在该新的优先级位置重新获取该对象的新副本（如果要对其进行进一步的更改）。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: priority
@@ -332,7 +332,7 @@ items:
           - 'excel!Excel.Interfaces.TopBottomConditionalFormatLoadOptions:interface'
   - uid: 'excel!Excel.Interfaces.ConditionalFormatLoadOptions#type:member'
     summary: |-
-      一种条件格式。 一次只能设置一个。 只读。
+      一种条件格式。 一次只能设置一个。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: type
