--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangeborderdata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.conditionalrangeborderdata.yml
@@ -14,7 +14,7 @@ items:
       - 'excel!Excel.Interfaces.ConditionalRangeBorderData#style:member'
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#color:member'
     summary: |-
-      代表\#RRGGBB （例如 "FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线条颜色的 HTML 颜色代码。
+      代表\#RRGGBB （例如，"FFA500"）或命名的 HTML 颜色（例如 "橙色"）的边框线颜色的 HTML 颜色代码。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: color
@@ -29,7 +29,7 @@ items:
           - string
   - uid: 'excel!Excel.Interfaces.ConditionalRangeBorderData#sideIndex:member'
     summary: |-
-      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。 只读。
+      指示边框的特定边的常量值。 有关详细信息，请参阅 ConditionalRangeBorderIndex。
 
       \[[API 集： ExcelApi 1.6](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: sideIndex
