--- a/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.textrangedata.yml
+++ b/docs/docs-ref-autogen/excel_online/excel/excel.interfaces.textrangedata.yml
@@ -13,7 +13,7 @@ items:
       - 'excel!Excel.Interfaces.TextRangeData#text:member'
   - uid: 'excel!Excel.Interfaces.TextRangeData#font:member'
     summary: |-
-      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。 只读。
+      返回一个 ShapeFont 对象，该对象表示文本范围的字体属性。
 
       \[[API 集： ExcelApi 1.9](/office/dev/add-ins/reference/requirement-sets/excel-api-requirement-sets)\]
     name: font
